# RDB-libs

./: .gitignore  Cleanup.bat  README.md
Libs/: ReadMe.txt
Src/Buffer/: CAudioBuffer.h  CBuffer.h  CDataBuffer.h  CRingBuffer.h  CVRingBuffer.h  CVectorBuffer.h  CVideoBuffer.h
Src/Error/: CError.h
Src/FileIO/: CAudioFileIO.cpp  CAudioFileIO.h  CFileIO.h  CFileStream.h  CVideoFileIO.cpp  CVideoFileIO.h  FileUtils.h
Src/GST/: GstWrapper.cpp  GstWrapper.h  GstWrsapper.cpp  GstWrsapper.h
Src/KbInput/: CConsoleMgr.h  KbInput.c  KbInput.h
Src/Logging/: LogMessageList.h  Logging.h
Src/Math/: MathUtils.cpp  MathUtils.h
Src/NetIO/: CClientIO.cpp  CClientIO.h  CNetworkIO.cpp  CNetworkIO.h  CServerIO.cpp  CServerIO.h
Src/Other/: VaPass.h  win32_unix.cpp  win32_unix.h
Src/PlugIn/: CPluginClassInstMgr.h  CPluginFileInfoMgr.h  CPluginFileMgr.h  CPluginLibLoader.h  CPluginLoader.h  CPluginMgr.h  Plugin.h  PluginDefs.h
Src/String/: StrUtils-old.h  StrUtils.h
Src/Thread/: ThreadBase.h  threadUtil.cpp  threadUtil.h
Src/XML/: PocoXmlUtils.cpp  PocoXmlUtils.h  XmlUtils.cpp  XmlUtils.h  xmlHandler.cpp  xmlHandler.h
Test/LoggingTest/: CMakeLists.txt  LoggingTest.cpp  LoggingTest.h  LoggingTest.sln  LoggingTest.vcxproj  LoggingTest.vcxproj.filters
